--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,11 @@
         <tfoot>
         </tfoot>
     </table>
-    <script src="js/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+    <script>
+        var n1 = new Negociacao('14/11/1992', 15, 150);
+        var volume = n1.obtemVolume();
+        console.log(volume);
+    </script>
 </body>
 </html>
