--- a/client/index.html
+++ b/client/index.html
@@ -61,8 +61,10 @@
     <script src="js/app/models/Negociacao.js"></script>
     <script>
         var n1 = new Negociacao('14/11/1992', 15, 150);
-        var volume = n1.obtemVolume();
-        console.log(volume);
+        console.log(n1.getData());
+        console.log(n1.getQuantidade());
+        console.log(n1.getValor());
+        console.log(n1.getVolume());
     </script>
 </body>
 </html>
