--- a/client/index.html
+++ b/client/index.html
@@ -60,11 +60,15 @@
     </table>
     <script src="js/app/models/Negociacao.js"></script>
     <script>
-        var n1 = new Negociacao('14/11/1992', 15, 150);
-        console.log(n1.getData());
-        console.log(n1.getQuantidade());
-        console.log(n1.getValor());
-        console.log(n1.getVolume());
+        let hoje = new Date();
+        
+        let n1 = new Negociacao(hoje, 5, 100);
+
+        console.log(n1.data);
+
+        hoje.setDate(11);
+
+        console.log(n1.data);
     </script>
 </body>
 </html>
