--- a/client/post.html
+++ b/client/post.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Negociações</title>
@@ -11,8 +12,8 @@
 
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>        
-        </div>    
+            <input type="date" id="data" class="form-control" required autofocus/>
+        </div>
 
         <div class="form-group">
             <label for="quantidade">Quantidade</label>
@@ -21,53 +22,56 @@
 
         <div class="form-group">
             <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
+            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0" required />
         </div>
 
         <button class="btn btn-primary" type="submit" onclick="sendPost(event)">Enviar dados para servidor</button>
     </form>
 
+    <script src="js/app/services/HttpService.js"></script>
+
     <script>
 
         function sendPost(event) {
 
-event.preventDefault();
+            event.preventDefault();
 
-console.log("Enviando post");
+            console.log("Enviando post");
 
-let $ = document.querySelector.bind(document);
-inputData = $('#data');
-inputQuantidade = $('#quantidade');
-inputValor = $('#valor');
+            let $ = document.querySelector.bind(document);
+            inputData = $('#data');
+            inputQuantidade = $('#quantidade');
+            inputValor = $('#valor');
 
-let negociacao = {
-    data: inputData.value,
-    quantidade: inputQuantidade.value,
-    valor: inputValor.value
-};
+            let negociacao = {
+                data: inputData.value,
+                quantidade: inputQuantidade.value,
+                valor: inputValor.value
+            };
 
-let xhr = new XMLHttpRequest();
-xhr.open("POST", "/negociacoes", true);
-xhr.setRequestHeader("Content-type", "application/json");
+            let xhr = new XMLHttpRequest();
+            xhr.open("POST", "/negociacoes", true);
+            xhr.setRequestHeader("Content-type", "application/json");
 
-xhr.onreadystatechange = () => {
+            xhr.onreadystatechange = () => {
 
-    if (xhr.readyState == 4) {
+                if (xhr.readyState == 4) {
 
-        if (xhr.status == 200) {
-            inputData.value = '';
-            inputQuantidade.value = 1;
-            inputValor.value = 0.0;
-            inputData.focus();
-            alert('Negociação enviada com sucesso');
-        } else {
-            alert(`Não foi possível enviar a negociação: ${xhr.responseText}`);
+                    if (xhr.status == 200) {
+                        inputData.value = '';
+                        inputQuantidade.value = 1;
+                        inputValor.value = 0.0;
+                        inputData.focus();
+                        alert('Negociação enviada com sucesso');
+                    } else {
+                        alert(`Não foi possível enviar a negociação: ${xhr.responseText}`);
+                    }
+                }
+            }
+            xhr.send(JSON.stringify(negociacao));
+
         }
-    }
-}
-xhr.send(JSON.stringify(negociacao));
-
-}
     </script>
 </body>
+
 </html>
