--- a/client/index.html
+++ b/client/index.html
@@ -58,8 +58,9 @@
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/NegociacaoService.js"></script>
     <script src="js/app/services/HttpService.js"></script>
+    <script src="js/app/polyfill/es6.js"></script>
     <script>
-        let negociacaoController = new NegociacaoController();
+        var negociacaoController = new NegociacaoController(); // alterado para var, para ter escopo global e funcionar no Safari.
     </script>
     
 </body>
