--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
     <script src="js/app/services/HttpService.js"></script>
     <script src="js/app/polyfill/es6.js"></script>
     <script src="js/app/services/ConnectionFactory.js"></script>
+    <script src="js/app/dao/NegociacaoDao.js"></script>
     <script>
         var negociacaoController = new NegociacaoController(); // alterado para var, para ter escopo global e funcionar no Safari.
     </script>
